data/repos_history/soat3-g35/postech-fase-5-pedido-app/2024-05-14T04:11:09Z/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pedido
  name: pedido
  namespace: pedido
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedido
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pedido
    spec:
      containers:
        - image: 471112887467.dkr.ecr.us-east-1.amazonaws.com/pedido-postech-repository:latest
          imagePullPolicy: Always
          name: api-img
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 250m
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
            initialDelaySeconds: 300
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10

status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pedido
  name: pedido
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: pedido
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pedido-app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/pedido"
            backend:
              service:
                name: pedido
                port:
                  number: 8080
